# DeadlineCount

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md
src/: main.rs
ui/: app-window.slint  components.slint  state_layer.slint
